--- a/Runtime Terror/Runtime Terror/clientapp/src/App.css
+++ b/Runtime Terror/Runtime Terror/clientapp/src/App.css
@@ -1,11 +1,3 @@
-
-body {
-  background-image: url("KGBackgroundVisual.png");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: 50% 50%; }
-   
-  
 .App {
   text-align: center;
 }
@@ -36,4 +28,11 @@ body {
   color: #61dafb;
 }
 
-
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
