--- a/RuntimeTerror/my-app/src/App.css
+++ b/RuntimeTerror/my-app/src/App.css
@@ -3,7 +3,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: 50% 50%;
-
+  background:'rgba(0, 0 , 0 , 0.5)';
 }
 .App {
   text-align: center;
@@ -11,9 +11,9 @@ body {
 .carousel { 
   inline-size: 150px;
   left: 6.3in;
-  width:300px; height:360px;
-background-image:  bottom bottom;
+  width:250px; height:320px;
+  min-width: 300px;
+  min-height: 300px;
   }
-  .carousel-items{
-    position: bottom ;
-  }
+  
+  
